apps/ip-checker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-checker
  namespace: ip-checker
  labels:
    app: ip-checker
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: ip-checker
