apps/ip-checker/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ip-checker
  namespace: ip-checker
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ip-checker.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: ip-checker
          port: 80
  tls:
    secretName: ip-checker-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ip-checker-http
  namespace: ip-checker
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`ip-checker.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: ip-checker
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: ip-checker
spec:
  redirectScheme:
    scheme: https
    permanent: true
